manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: valcon
  name: valcon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valcon
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: valcon
    spec:
      containers:
      - image: rakshitgondwal/valcontroller:0.1.0
        name: valcontroller
        args:
          - --tls-cert-file=/var/run/webhook/serving-cert/tls.cert
          - --tls-private-key-file=/var/run/webhook/serving-cert/tls.key
          - --v=4
        resources: {}
        volumeMounts:
        - name: serving-cert
          mountPath: /var/run/webhook/serving-cert
      volumes:
      - name: serving-cert
        secret:
          secretName: certs
status: {}
