manifests/val-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "valcon.rakshitgondwal.dev"
webhooks:
- name: "valcon.rakshitgondwal.dev"
  rules:
  - apiGroups:    ["valcon.rakshitgondwal.dev"]
    apiVersions:  ["v1aplha1"]
    operations:   ["CREATE","UPDATE"]
    resources:    ["deployments"]
    scope:        "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "valcon"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZPakNDQXlLZ0F3SUJBZ0lVSGJVRFpIMnpzWWZZUjV5RlRpQmNIVVloVFA0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hURWJNQmtHQTFVRUF3d1NkbUZzWTI5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJek1EZ3dNakU0TWpFegpNRm9YRFRJME1EZ3dNVEU0TWpFek1Gb3dIVEViTUJrR0ExVUVBd3dTZG1Gc1kyOXVMbVJsWm1GMWJIUXVjM1pqCk1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBcDBKUi91M0swVVcyRnNUOU5zQXoKdlN6NkYyK0RkMTY5YmlQR2pmU1MxRXFXWGJFcDBOSWVVWkxPT2RRL3RGZzJMUk9VT2l3dUZzSXFHSjJ4QlF1bApVYThHU3hNS0FaU [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
